
**************************************************
*                                                *
*	CHANGELOG: CMS_GEM_Analysis_Framework        *
*	VERSION: 2.2.3                               *
*	VERSION: 2.2.4                               *
*	LAST UPDATE: Oct 6 2016                      *
*                                                *
**************************************************

Update: October 6th 2016
==================================================
->Added new class QualityControl::Plotter::PlotterGraph2D inheriting from PlotterGeneric for making plots of TGraph2D objects
->Added new class QualityControl::Plotter::PlotterHisto inheriting from PlotterGeneric for making plots of TH1F objects
->Added new struct QualityControl::Plotter::PlotTypesPlotter, in include/QualityControlSectionNames.h, for tracking type of TObject for plotter to plot
->Now genericPlotter will understand what type of TObject it should plot
->QualityControl::Plotter::DataPoint now has attributes for z and z_err respectively m_fZ and m_fZ_Err
->Style attributes moved from QualityControl::Plotter::InfoPlot to QualityControl::Plotter::InfoCanvas
->Incorporating timing correction fix in SRSHit from M. Maggi
->Added flag for plotting legend or not in QualityControl::Plotter::PlotterGeneric

Update: October 5th 2016
==================================================
->New make file for genericPlotter executable: MakefilePlotter.clang & MakefilePlotter.gpp
->New config file for use with genericPlotter executable: config/configPlot.cfg
->Adding new utility functions for the QualityControl::Plotter namespace found in include/PlotterUtilityFunctions.h & src/PlotterUtilityFunctions.cpp
->New utility function QualityControl::Plotter::conver2Color
->New int main() for generic executable found in src/genericPlotter.cpp
->QualityControl::Plotter::ParameterLoaderPlotter class implemented and tested
->Added new class QualityControl::Plotter::PlotterGeneric for making plots