@@ -75,4 +75,4 @@ echo "gedit $FILE_RUN &"
 echo ""
 echo "To launch the analysis execute:"
 echo "cd $GEM_BASE"
-echo "./analyzeUniformity $FILE_RUN true"
+echo "./frameworkMain $FILE_RUN true"
